--- a/index3.html
+++ b/index3.html
@@ -58,6 +58,41 @@
     </div>
   </header><!-- End Header -->
 
+  <!-- ======= Intro Section ======= -->
+  <section id="intro">
+    <div class="intro-container">
+      <div id="introCarousel" class="carousel  slide carousel-fade" data-ride="carousel">
+
+        <ol class="carousel-indicators"></ol>
+
+        <div class="carousel-inner" role="listbox">
+
+          <div class="carousel-item active">
+            <div class="carousel-background"><img src="assets/img/intro-carousel/1.jpg" alt=""></div>
+            <div class="carousel-container">
+              <div class="carousel-content">
+                <h2>Azur Consultores</h2>
+                <p>Realizamos servicios personalizados en el área contable, además de asesorías tributarias y educacionales.</p>
+                <a href="#featured-services" class="btn-get-started scrollto">Ver más</a>
+              </div>
+            </div>
+          </div>          
+        </div>
+
+        <a class="carousel-control-prev" href="#introCarousel" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon ion-chevron-left" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+
+        <a class="carousel-control-next" href="#introCarousel" role="button" data-slide="next">
+          <span class="carousel-control-next-icon ion-chevron-right" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+
+      </div>
+    </div>
+  </section><!-- End Intro Section -->
+
     <!-- ======= About Section ======= -->
     <section id="about" class="about">
       <div class="container">
